Implemented RBAC with JWT roles